unpackaged/main/default/objects/Unhandled_Exception__c/Unhandled_Exception__c.object-meta.xml
<CustomObject>
    <label>Unhandled Exception</label>
    <nameField>
        <displayFormat>UE-{0000000}</displayFormat>
        <label>Unhandled Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unhandled Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>