unpackaged/main/default/objects/Unhandled_Exception__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>Type of unhandled exception.</description>
    <inlineHelpText>Type of unhandled exception.</inlineHelpText>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>