unpackaged/main/default/objects/Unhandled_Exception__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Line number of code that the exception was thrown.</description>
    <inlineHelpText>Line number of code that the exception was thrown.</inlineHelpText>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>