unpackaged/main/default/objects/Unhandled_Exception__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Unhandled Exception Message.</description>
    <inlineHelpText>Unhandled Exception Message.</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>