unpackaged/main/default/objects/Unhandled_Exception__c/fields/Object_Data__c.field-meta.xml
<CustomField>
    <fullName>Object_Data__c</fullName>
    <description>Text area field to store the attributes of the object that failed DML or created another uncaught exception.</description>
    <label>Object Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>