unpackaged/main/default/objects/Unhandled_Exception__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Stack trace for the event.</description>
    <inlineHelpText>Stack trace for the event.</inlineHelpText>
    <label>Stack Trace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>